fix ableplayer overlap of details/summary

--- a/style.scss
+++ b/style.scss
@@ -226,8 +226,6 @@ a {
   padding-block-start: 6vh;
 
   .able-wrapper {
-    aspect-ratio: 16/9;
-
     .able-controller {
       background-color: light-dark($contrast1);
     }
